[FIX] - optimize memory heap