@@ -61,8 +61,9 @@ HEALTHCHECK --interval=30s --timeout=5s --start-period=90s --retries=3 \
 
 ENTRYPOINT ["java", \
     "-XX:+UseContainerSupport", \
-    "-XX:MaxRAMPercentage=75.0", \
-    "-XX:+UseZGC", \
-    "-XX:+ZGenerational", \
+    "-XX:MaxRAMPercentage=50.0", \
+    "-XX:+UseSerialGC", \
+    "-XX:MaxMetaspaceSize=128m", \
+    "-Xss512k", \
     "-Djava.security.egd=file:/dev/./urandom", \
     "org.springframework.boot.loader.launch.JarLauncher"]
